--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     </head>
     <body>
         <main>
+
             <h1>Esercizio per casa</h1>
 
-            <section id="multi/nested col">
+            <section id="multi/nested-col">
                 <div class="row">
 
                     <div class="col-1">1 col</div>
@@ -57,7 +58,34 @@
                     </div>
                 </div>
             </section>
-            
+
+            <section id="growing-col">
+
+                <h2>Growing columns</h2>
+
+                <div class="row">
+                    <div class="col-12"></div>
+
+                    <div class="col-1"></div>
+                    <div class="col-11"></div>
+
+                    <div class="col-2"></div>
+                    <div class="col-10"></div>
+
+                    <div class="col-3"></div>
+                    <div class="col-9"></div>
+
+                    <div class="col-4"></div>
+                    <div class="col-8"></div>
+
+                    <div class="col-5"></div>
+                    <div class="col-7"></div>
+
+                    <div class="col-6"></div>
+                    <div class="col-6"></div>
+                </div>
+
+            </section>
         </main>
     </body>
 </html>
