--- a/index.html
+++ b/index.html
@@ -15,77 +15,100 @@
 
             <h1>Esercizio per casa</h1>
 
-            <section id="multi/nested-col">
-                <div class="row">
+            <div class="container">
+                <section id="multi/nested-col">
 
-                    <div class="col-1">1 col</div>
-                    <div class="col-1">1 col</div>
-                    <div class="col-1">1 col</div>
-                    <div class="col-1">1 col</div>
-                    <div class="col-1">1 col</div>
-                    <div class="col-1">1 col</div>
-                    <div class="col-1">1 col</div>
-                    <div class="col-1">1 col</div>
-                    <div class="col-1">1 col</div>
-                    <div class="col-1">1 col</div>
-                    <div class="col-1">1 col</div>
-                    <div class="col-1">1 col</div>
-
-                    <div class="col-2">col</div>
-                    <div class="col-5">col</div>
-                    <div class="col-5">col</div>
-
-                    <div class="col-12">12 col</div>
-
-                    <div class="col-1">1 col</div>
-                    <div class="col-2">2 col</div>
-                    <div class="col-2">2 col</div>
-                    <div class="col-6">6 col</div>
-                    <div class="col-1">1 col</div>
-
-                    <div class="col-6">
-                        <div class="row">
-                            <div class="col-2">Nested 2 col</div>
-                            <div class="col-2">Nested 2 col</div>
-                            <div class="col-8">Nested 8 col</div>
+                    <div class="row">
+                        <div class="col-1">1 col</div>
+                        <div class="col-1">1 col</div>
+                        <div class="col-1">1 col</div>
+                        <div class="col-1">1 col</div>
+                        <div class="col-1">1 col</div>
+                        <div class="col-1">1 col</div>
+                        <div class="col-1">1 col</div>
+                        <div class="col-1">1 col</div>
+                        <div class="col-1">1 col</div>
+                        <div class="col-1">1 col</div>
+                        <div class="col-1">1 col</div>
+                        <div class="col-1">1 col</div>
                         </div>
-                    </div>
-                    <div class="col-6">
+
                         <div class="row">
-                            <div class="col-6">Nested 6 col</div>
-                        <div class="col-6">Nested 6 col</div>
+                            <div class="col-2">col</div>
+                            <div class="col-5">col</div>
+                            <div class="col-5">col</div>
                         </div>
+
+                        <div class="row">
+                            <div class="col-12">12 col</div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-1">1 col</div>
+                            <div class="col-2">2 col</div>
+                            <div class="col-2">2 col</div>
+                            <div class="col-6">6 col</div>
+                            <div class="col-1">1 col</div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-6">
+                                <div class="row">
+                                    <div class="col-2">Nested 2 col</div>
+                                    <div class="col-2">Nested 2 col</div>
+                                    <div class="col-8">Nested 8 col</div>
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="row">
+                                    <div class="col-6">Nested 6 col</div>
+                                <div class="col-6">Nested 6 col</div>
+                                </div>
+                            </div>
+                        </div>
+
+                </section>
+
+                <section id="growing-col">
+
+                    <h2>Growing columns</h2>
+
+                    <div class="row">
+                        <div class="col-12"></div>
                     </div>
-                </div>
-            </section>
 
-            <section id="growing-col">
+                    <div class="row">
+                        <div class="col-1"></div>
+                        <div class="col-11"></div>
+                    </div>
 
-                <h2>Growing columns</h2>
+                    <div class="row">
+                        <div class="col-2"></div>
+                        <div class="col-10"></div>
+                    </div>
 
-                <div class="row">
-                    <div class="col-12"></div>
+                    <div class="row">
+                        <div class="col-3"></div>
+                        <div class="col-9"></div>
+                    </div>
 
-                    <div class="col-1"></div>
-                    <div class="col-11"></div>
+                    <div class="row">
+                        <div class="col-4"></div>
+                        <div class="col-8"></div>
+                    </div>
 
-                    <div class="col-2"></div>
-                    <div class="col-10"></div>
+                    <div class="row">
+                        <div class="col-5"></div>
+                        <div class="col-7"></div>
+                    </div>
 
-                    <div class="col-3"></div>
-                    <div class="col-9"></div>
+                    <div class="row">
+                        <div class="col-6"></div>
+                        <div class="col-6"></div>
+                    </div>
 
-                    <div class="col-4"></div>
-                    <div class="col-8"></div>
-
-                    <div class="col-5"></div>
-                    <div class="col-7"></div>
-
-                    <div class="col-6"></div>
-                    <div class="col-6"></div>
-                </div>
-
-            </section>
+                </section>
+            </div>
         </main>
     </body>
 </html>
